chandeliers-lus/tests/compile_fail/ui/causality/redef-var-vv.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-vv.rs:3:18
  |
3 |     var a : int; a : int;
  |                  ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-vv.rs:3:9
  |
3 |     var a : int; a : int;
  |         ^
